Revision history for Perl extension Uniq.

0.01  Thu Aug 21 15:56:43 2003
	- original version
